--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "passnotes",
+  "name": "rando",
   "version": "1.0.0",
-  "description": "React.js implementation of passnotes",
-  "main": "./api/app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon api/server.js",
-    "client": "node start-client.js"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
-  "author": "azhad syed",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.6",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.11.12",
+    "morgan": "^1.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
